welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:13: error: type mismatch;
 found   : Unit
 required: Int
	if (die1==die2){
        ^withoutDoubles:10: error: type mismatch;
 found   : Unit
 required: Int
}else if (noDoubles==true ){
      ^