welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.code
def withoutDoubles(die1:Int, die2:Int, noDoubles:Boolean):Int = {

var s=0

 if( noDoubles==false) {
                     	s=die1+die2
                       return s

   
}else if (noDoubles==true ){
	

	if (die1==die2){
		
	
                      if(die1==6 && die2==6){
      	
      	           return 2 
      	                         }

      	                         
	                 else if (die1==6 && die2==6) {
		
	
		            s=die1+die2-5
		               return s
                    
                       }else {
	
                       s=die1+die2+1
                       
	                  return s
                       }

	}
	}
}